<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cn.nipc.mobiletool</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_activity_set">用户常用设置，包括某些模块的开启。</string>
    <string name="main_activity_about">对该软件的简单介绍以及版权说明</string>
    <string name="main_activity_userinfo">用户的个人信息按钮</string>
    <string name="main_activity_logo">应用的LOGO</string>
    <string name="main_activity_tag1">扫描</string>
    <string name="main_activity_tag2">监控</string>
    <string name="main_activity_tag3">工具</string>
    <string name="title_activity_network_traffic_monitor">NetworkTrafficMonitor</string>
    <string name="network_traffic_set">流量监控设置</string>
    <string name="network_traffic_monitor">流量监控</string>
    <string name="firework">联网防火墙</string>
	<string name="net_traffic_range">流量排行</string>
</resources>