<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#CCCCCC"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/title1"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:text="@string/main_activity_tag1"
            android:layout_weight="1.0"
            android:gravity="center"
            android:clickable="true"
            android:textColor="#000000"
            android:textSize="20sp"/>
        <TextView 
            android:id="@+id/title2"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:text="@string/main_activity_tag2"
            android:layout_weight="1.0"
            android:gravity="center"
            android:clickable="true"
            android:textColor="#000000"
            android:textSize="20sp"/>
        <TextView 
            android:id="@+id/title3"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:text="@string/main_activity_tag3"
            android:layout_weight="1.0"
            android:gravity="center"
            android:clickable="false"
            android:textColor="#000000"
            android:textSize="20sp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:src="@drawable/main_cursor"/>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:background="@drawable/main_screen_bg">
	    <android.support.v4.view.ViewPager
	        android:id="@+id/view_pager"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	    </android.support.v4.view.ViewPager>
	    <RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:focusable="false"
	        android:layout_gravity="bottom"
	        android:focusableInTouchMode="false">
		    <ImageView
	            android:id="@+id/logo"
	            android:src="@drawable/main_logo"
	            android:layout_height="wrap_content"
	            android:layout_width="fill_parent"
	            android:scaleType="fitXY"
	            android:contentDescription="@string/main_activity_logo"
	            android:layout_marginBottom="0dp"
	            android:layout_alignParentBottom="true"
	            android:layout_centerHorizontal="true"/>
	        <ImageView 
	            android:id="@+id/set"
	            style="@style/main_button"
	            android:layout_above="@id/logo"
	            android:layout_marginRight="20dp"
	            android:layout_marginLeft="20dp"
	            android:layout_centerHorizontal="true"
	            android:contentDescription="@string/main_activity_set"
	            android:src="@drawable/main_set"/>
	        <ImageView 
	            android:id="@+id/about"
	            android:layout_toLeftOf="@id/set"
	            android:layout_alignBottom="@id/set"
	            android:layout_marginRight="20dp"
	            style="@style/main_button"
	            android:contentDescription="@string/main_activity_about"
	            android:src="@drawable/main_about"/>
	        <ImageView
	            android:id="@+id/userinfo"
	            android:layout_toRightOf="@id/set"
	            android:layout_alignBottom="@id/set"
	            android:layout_marginLeft="20dp"
	            style="@style/main_button"
	            android:contentDescription="@string/main_activity_userinfo"
	            android:src="@drawable/main_userinfo"/>
	    </RelativeLayout>
    </FrameLayout>
</LinearLayout>